[project]
name = "autogen-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aasher Kamal", email = "aasherkamal786@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.8.7",
    "autogenstudio>=0.4.2.1",
]

[project.scripts]
autogen-ui = "autogen_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
